WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156144
Shadow DOM: Slot style is not computed
https://bugs.webkit.org/show_bug.cgi?id=156144
Summary
Shadow DOM: Slot style is not computed
Antti Koivisto
Reported
2016-04-03 04:20:38 PDT
We don’t currently compute style for active slots. While slots have have implicit display:contents and don’t create boxes themselves the style should still inherit to slotted children. Basically <slot style=“color:red”></slot> should work as expected.
Attachments
patch
(11.80 KB, patch)
2016-04-03 04:40 PDT
,
Antti Koivisto
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(814.51 KB, application/zip)
2016-04-03 05:24 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(806.70 KB, application/zip)
2016-04-03 05:27 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(700.41 KB, application/zip)
2016-04-03 05:32 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-yosemite
(876.54 KB, application/zip)
2016-04-03 05:37 PDT
,
Build Bot
no flags
Details
patch
(12.26 KB, patch)
2016-04-03 08:03 PDT
,
Antti Koivisto
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-04-03 04:22:21 PDT
rdar://problem/25238498
Antti Koivisto
Comment 2
2016-04-03 04:40:51 PDT
Created
attachment 275495
[details]
patch
Build Bot
Comment 3
2016-04-03 05:24:13 PDT
Comment on
attachment 275495
[details]
patch
Attachment 275495
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1092099
New failing tests: fast/shadow-dom/css-scoping-shadow-slot-style.html editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 4
2016-04-03 05:24:17 PDT
Created
attachment 275496
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-04-03 05:27:05 PDT
Comment on
attachment 275495
[details]
patch
Attachment 275495
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1092104
New failing tests: fast/shadow-dom/css-scoping-shadow-slot-style.html editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 6
2016-04-03 05:27:09 PDT
Created
attachment 275497
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-04-03 05:32:06 PDT
Comment on
attachment 275495
[details]
patch
Attachment 275495
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1092102
New failing tests: fast/shadow-dom/css-scoping-shadow-slot-style.html editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 8
2016-04-03 05:32:10 PDT
Created
attachment 275498
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-04-03 05:37:52 PDT
Comment on
attachment 275495
[details]
patch
Attachment 275495
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1092115
New failing tests: fast/shadow-dom/css-scoping-shadow-slot-style.html editing/execCommand/justify-right-then-indent-with-problematic-body.html
Build Bot
Comment 10
2016-04-03 05:37:56 PDT
Created
attachment 275499
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Antti Koivisto
Comment 11
2016-04-03 08:03:04 PDT
Created
attachment 275500
[details]
patch
Antti Koivisto
Comment 12
2016-04-03 13:20:18 PDT
https://trac.webkit.org/r198990
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug