Shadow DOM: Slot style is not computed https://bugs.webkit.org/show_bug.cgi?id=156144

Reviewed by Darin Adler.

Source/WebCore:

We don’t currently compute style for active slots. While slots have have implicit display:contents and don’t create
boxes themselves the style should still inherit to slotted children.

Basically

<slot style=“color:red”></slot>

should work as expected.

The implementation falls out from the new style resolve architecture and this patch mostly just removes the special
case code that prevented this from working.

Test: fast/shadow-dom/css-scoping-shadow-slot-style.html

* html/HTMLSlotElement.h:
(WebCore::hasImplicitDisplayContents):

    Move to a shared location.

* style/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::RenderTreeUpdater):
(WebCore::findRenderingRoot):
(WebCore::RenderTreeUpdater::updateRenderTree):

    Remove the special case code. What remains is a display:contents test for rendererless elements.

(WebCore::RenderTreeUpdater::updateElementRenderer):

    Don't create renderers for (implicit) display:contents.

(WebCore::hasDisplayContents): Deleted.
* style/StyleTreeResolver.cpp:
(WebCore::Style::detachRenderTree):
(WebCore::Style::affectsRenderedSubtree):

    Factor into a function.

(WebCore::Style::TreeResolver::resolveElement):

    Remove the special case code.

(WebCore::Style::TreeResolver::resolveComposedTree):

    Always resolve slots as we don't currently save their style.

LayoutTests:

* fast/shadow-dom/css-scoping-shadow-slot-style-expected.html: Added.
* fast/shadow-dom/css-scoping-shadow-slot-style.html: Added.



Canonical link: https://commits.webkit.org/174270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198990 268f45cc-cd09-0410-ab3c-d52691b4dbfc